--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2",
-    "xrc-schema": "github:umdxrclub/XRCSchema"
+    "xrc-schema": "file:../schema"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
