--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node run.ts"
+    "build": "webpack",
+    "start": "ts-node run.ts",
+    "start-node": "node ./dist/backend.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.0",
     "axios-cookiejar-support": "^2.0.4",
+    "babel-loader": "^8.2.4",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-basic-auth": "^1.2.1",
     "node-html-parser": "^5.2.0",
@@ -20,17 +24,22 @@
     "sequelize": "^6.16.1",
     "tough-cookie": "^4.0.0",
     "tough-cookie-file-store": "^2.0.3",
+    "ts-loader": "^9.2.8",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2",
+    "webpack": "^5.70.0",
+    "webpack-node-externals": "^3.0.0",
     "xrc-schema": "file:../schema"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.18",
     "@types/tough-cookie": "^4.0.1",
     "@types/tough-cookie-file-store": "^2.0.1",
-    "@types/uuid": "^8.3.4"
+    "@types/uuid": "^8.3.4",
+    "webpack-cli": "^4.9.2"
   }
 }
