--- a/schema/package.json
+++ b/schema/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "axios": "^0.26.1",
     "typescript": "^4.6.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12"
   }
 }
