--- a/backend/package.json
+++ b/backend/package.json
@@ -2,19 +2,19 @@
   "name": "xrcbackend",
   "version": "1.0.0",
   "description": "A backend service that helps manage members, keep track of devices, provide lab status, etc.",
-  "main": "index.js",
+  "main": "backend.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "ts-node run.ts",
-    "start-node": "node ./dist/backend.js"
+    "build": "tsc",
+    "start": "ts-node ./src/run.ts --transpile-only",
+    "serve": "node ./dist/run.js",
+    "deploy": "ts-node ./util/deploy.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.0",
     "axios-cookiejar-support": "^2.0.4",
-    "babel-loader": "^8.2.4",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-basic-auth": "^1.2.1",
@@ -24,12 +24,8 @@
     "sequelize": "^6.16.1",
     "tough-cookie": "^4.0.0",
     "tough-cookie-file-store": "^2.0.3",
-    "ts-loader": "^9.2.8",
     "ts-node": "^10.5.0",
-    "typescript": "^4.5.5",
     "uuid": "^8.3.2",
-    "webpack": "^5.70.0",
-    "webpack-node-externals": "^3.0.0",
     "xrc-schema": "file:../schema"
   },
   "devDependencies": {
@@ -40,6 +36,7 @@
     "@types/tough-cookie": "^4.0.1",
     "@types/tough-cookie-file-store": "^2.0.1",
     "@types/uuid": "^8.3.4",
-    "webpack-cli": "^4.9.2"
+    "node-ssh": "^12.0.4",
+    "typescript": "^4.5.5"
   }
 }
