--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "extends": "@tsconfig/node16/tsconfig.json",
+    "include": ["./src/*"],
     "compilerOptions": {
         "resolveJsonModule": true,
+        "outDir": "./dist"
     }
 }
