--- a/schema/package.json
+++ b/schema/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "deploy": "ts-node -P ./util/tsconfig.json ./util/deploy.ts"
   },
   "types": "./dist/index.d.ts",
   "license": "ISC",
@@ -13,6 +14,9 @@
     "typescript": "^4.6.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12"
+    "@tsconfig/node17": "^1.0.0",
+    "@types/cors": "^2.8.12",
+    "node-ssh": "^12.0.4",
+    "ts-node": "^10.7.0"
   }
 }
