--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@mdi/js": "^6.6.95",
+    "@mdi/react": "^1.5.0",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@testing-library/jest-dom": "^5.16.2",
@@ -15,7 +17,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "html5-qrcode": "^2.2.0",
-    "node-ssh": "^12.0.3",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
@@ -45,6 +47,7 @@
   "homepage": "/frontend",
   "devDependencies": {
     "@tsconfig/node17": "^1.0.0",
+    "node-ssh": "^12.0.4",
     "ts-node": "^10.7.0"
   }
 }
