--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
     "discord.js": "^14.2.0",
     "express": "^4.17.3",
     "express-basic-auth": "^1.2.1",
+    "json-rpc-2.0": "^1.4.1",
     "node-html-parser": "^5.4.2",
+    "npm": "^8.19.2",
     "otplib": "^12.0.1",
     "pg": "^8.7.3",
     "sequelize": "^6.16.1",
