--- a/backend/package.json
+++ b/backend/package.json
@@ -19,12 +19,13 @@
     "axios-cookiejar-support": "^2.0.4",
     "cors": "^2.8.5",
     "discord.js": "^14.2.0",
-    "express": "^4.17.3",
+    "express": "^4.18.2",
     "express-basic-auth": "^1.2.1",
     "json-rpc-2.0": "^1.4.1",
     "node-html-parser": "^5.4.2",
     "npm": "^8.19.2",
     "otplib": "^12.0.1",
+    "payload": "^1.1.16",
     "pg": "^8.7.3",
     "sequelize": "^6.16.1",
     "tough-cookie": "^4.0.0",
@@ -43,5 +44,6 @@
     "@types/uuid": "^8.3.4",
     "jest": "^28.1.3",
     "typescript": "^4.5.5"
-  }
+  },
+  "private": true
 }
