--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
     "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4",
-    "xrc-schema": "file:../schema"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
