--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc ./src/run.ts --outDir ./dist",
     "start": "ts-node ./src/run.ts --transpile-only",
     "serve": "node ./dist/run.js",
-    "deploy": "ts-node ./scripts/deploy.ts"
+    "deploy": "ts-node ./scripts/deploy.ts",
+    "dev": "nodemon ./src/run.ts"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +26,7 @@
     "node-html-parser": "^5.4.2",
     "npm": "^8.19.2",
     "otplib": "^12.0.1",
+    "passport": "^0.6.0",
     "payload": "^1.1.16",
     "pg": "^8.7.3",
     "sequelize": "^6.16.1",
@@ -32,6 +34,7 @@
     "tough-cookie-file-store": "^2.0.3",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.5.0",
+    "util": "^0.12.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -39,10 +42,12 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.18",
+    "@types/passport": "^1.0.11",
     "@types/tough-cookie": "^4.0.1",
     "@types/tough-cookie-file-store": "^2.0.1",
     "@types/uuid": "^8.3.4",
     "jest": "^28.1.3",
+    "nodemon": "^2.0.20",
     "typescript": "^4.5.5"
   },
   "private": true
