--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@svgr/webpack": "^6.5.1",
-    "@types/jest": "^28.1.6",
-    "@types/node-schedule": "^2.1.0",
     "axios": "^0.26.0",
     "axios-cookiejar-support": "^2.0.4",
     "copyfiles": "^2.4.1",
@@ -35,6 +33,7 @@
     "express": "^4.18.2",
     "express-basic-auth": "^1.2.1",
     "html5-qrcode": "^2.3.4",
+    "http-cookie-agent": "^5.0.2",
     "json-rpc-2.0": "^1.4.1",
     "moment": "^2.29.4",
     "node-html-parser": "^5.4.2",
@@ -45,23 +44,29 @@
     "passport": "^0.6.0",
     "payload": "^1.5.6",
     "pg": "^8.7.3",
+    "react-color": "^2.19.3",
     "sequelize": "^6.16.1",
     "tough-cookie": "^4.0.0",
     "tough-cookie-file-store": "^2.0.3",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.5.0",
     "util": "^0.12.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "ws": "^8.12.0"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
     "@types/node": "^17.0.18",
+    "@types/node-schedule": "^2.1.0",
     "@types/passport": "^1.0.11",
+    "@types/react-color": "^3.0.6",
     "@types/tough-cookie": "^4.0.1",
     "@types/tough-cookie-file-store": "^2.0.1",
     "@types/uuid": "^8.3.4",
+    "@types/ws": "^8.5.4",
     "jest": "^28.1.3",
     "nodemon": "^2.0.20",
     "typescript": "^4.5.5"
