--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@svgr/webpack": "^6.5.1",
     "axios": "^0.26.0",
     "axios-cookiejar-support": "^2.0.4",
+    "canvas": "^2.11.0",
     "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
