--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ts-node": "^10.5.0",
     "util": "^0.12.5",
     "uuid": "^9.0.0",
+    "vrchat": "^1.13.0",
     "ws": "^8.12.0",
     "zod": "^3.21.4"
   },
