Upgraded to Payload 2.0 but it's very sketchy

--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
+    "@payloadcms/bundler-webpack": "^1.0.5",
+    "@payloadcms/db-mongodb": "^1.1.1",
+    "@payloadcms/richtext-lexical": "^0.5.0",
     "axios": "^0.26.0",
     "axios-cookiejar-support": "^2.0.4",
-    "canvas": "^2.11.0",
+    "canvas": "^2.11.2",
     "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "discord.js": "^14.11.0",
+    "discord.js": "^14.13.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-basic-auth": "^1.2.1",
@@ -42,10 +45,11 @@
     "npm": "^8.19.2",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
-    "payload": "^1.15.5",
+    "payload": "^2.5.0",
     "pg": "^8.7.3",
     "react-color": "^2.19.3",
     "sequelize": "^6.16.1",
+    "sharp": "^0.33.1",
     "tough-cookie": "^4.0.0",
     "tough-cookie-file-store": "^2.0.3",
     "ts-jest": "^28.0.7",
