--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@payloadcms/bundler-webpack": "^1.0.5",
     "@payloadcms/db-mongodb": "^1.1.1",
     "@payloadcms/richtext-lexical": "^0.5.0",
+    "@xrclub/club.js": "^1.0.0",
     "axios": "^0.26.0",
     "axios-cookiejar-support": "^2.0.4",
     "canvas": "^2.11.2",
